--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -12,6 +12,150 @@
 
 
 
+### 复旦最新提出！革命性的LiDAR SLAM统一架构！
+
+- 文章：[复旦最新提出！革命性的LiDAR SLAM统一架构！](https://mp.weixin.qq.com/s/hVJw37IM7-_0Rs_s1nKD5Q)
+- 标题：DeepPointMap: Advancing LiDAR SLAM with Unified Neural Descriptors
+- 作者：Xiaze Zhang等人
+- 机构：复旦大学
+- 论文：[点击下载](https://pan.baidu.com/s/121wsj61SuUV4yTK2ay44YQ)
+
+### CMU&MIT最新突破！实现高速SLAM与实时3D渲染的全新方法
+
+- 文章：[CMU&MIT最新突破！实现高速SLAM与实时3D渲染的全新方法](https://mp.weixin.qq.com/s/Axa0X2gFoicanUpGjynJ_A)
+- 标题：SplaTAM: Splat, Track & Map 3D Gaussians for Dense RGB-D SLAM
+- 作者：Nikhil Keetha等人
+- 机构：CMU&MIT
+- 论文：[点击下载](https://pan.baidu.com/s/1dcSqUSXfCJB_FCSNfxyYnw)
+
+### 英伟达最新发布！超越其它所有SOTA的3D目标检测
+
+- 文章：[ 英伟达最新发布！超越其它所有SOTA的3D目标检测](https://mp.weixin.qq.com/s/n7rZtPX1pDzBwYaHurDuTA)
+- 标题：3DIFFTECTION: 3D OBJECT DETECTION WITH GEOMETRY-AWARE DIFFUSION FEATURES
+- 作者：Chenfeng Xu等人
+- 机构：英伟达等单位
+- 论文：[点击下载](https://pan.baidu.com/s/1dcSqUSXfCJB_FCSNfxyYnw)
+
+### 最新突破！稀疏表示与两阶段训练策略赋予BeV分割新境界
+
+- 文章：[ 最新突破！稀疏表示与两阶段训练策略赋予BeV分割新境界](https://mp.weixin.qq.com/s/k8JrlrhQHYw7EH9dg2HTug)
+- 标题：PointBeV：A Sparse Approach to BeV Predictions
+- 作者：Lo¨ıck Chambon, et al.
+- 机构：Valeo.ai,Sorbonne Universite
+- 论文：[点击下载](https://pan.baidu.com/s/10PhXgzjcOpYe4INVckNDfg)
+
+### IEEE最新！突破室内定位局限性：磁力场辅助惯性导航系统
+
+- 文章：[ IEEE最新！突破室内定位局限性：磁力场辅助惯性导航系统](https://mp.weixin.qq.com/s/533ME4ZbTQwkkGgiic74hw)
+- 标题：MAINS: A Magnetic Field Aided Inertial Navigation System for Indoor Positioning
+- 作者：Chuan Huang, et al.
+- 论文：[点击下载](https://pan.baidu.com/s/1fdnfT8kuvlgiTB0Rq2xXPQ)
+
+### 清华最新提出！第一个基于激光雷达（LiDAR）的行人重识别
+
+- 文章：[ 清华最新提出！第一个基于激光雷达（LiDAR）的行人重识别](https://mp.weixin.qq.com/s/55SyK-LEMMmsIDrPkvenPw)
+- 标题：LiDAR-based Person Re-identification
+- 作者：Wenxuan Guo, et al.
+- 作者机构：清华大学等单位
+- 论文：[点击下载](https://pan.baidu.com/s/147CljJt3jnh2NEK_4R6l3A)
+
+### 混合表示的神经RGB-D语义SLAM方法：实现高效、全面和语义分解的几何重建
+
+- 文章：[ 混合表示的神经RGB-D语义SLAM方法：实现高效、全面和语义分解的几何重建](https://mp.weixin.qq.com/s/zbqILQqkZ4NCvlmu2SfXxQ)
+- 标题：DNS SLAM: Dense Neural Semantic-Informed SLAM
+- 作者：Kunyi Li, et al.
+- 作者机构：慕尼黑工业大学
+- 论文：[点击下载](https://pan.baidu.com/s/1vuRQK72utCv4p3Vu5InfvQ)
+
+### 最新发布！2023西安电子科技3D点云配准！
+
+- 文章：[ 最新发布！2023西安电子科技3D点云配准！](https://mp.weixin.qq.com/s/Y9X8K6iL69wa-rKo1kS6LA)
+- 标题：PANet: A Point-Attention Based Multi-Scale Feature Fusion Network for Point Cloud Registration
+- 作者：Yue Wu，et al.
+- 作者机构：西安电子科技大学
+- 论文：[点击下载](https://pan.baidu.com/s/17K9KdyrFm3qtNKsWTcT8Rg)
+
+### ICCV2023开源！UncLe-SLAM：稠密神经辐射场SLAM的不确定性学习
+
+- 文章：[ICCV2023开源！UncLe-SLAM：稠密神经辐射场SLAM的不确定性学习](https://mp.weixin.qq.com/s/StETgtzzEPeIHMw47LGVcg)
+- 标题：UncLe-SLAM: Uncertainty Learning for Dense Neural SLAM
+- 作者：Erik Sandstrom,et al.
+- 作者机构：苏黎世联邦理工学院
+- 论文：[点击下载](https://pan.baidu.com/s/1KgD8Be1jpQmOX2t_CdT0YA)
+
+### CVPR！不会吧？难道你还没看过NeRF+SLAM的经典文献NICE-SLAM？
+
+- 文章：[CVPR！不会吧？难道你还没看过NeRF+SLAM的经典文献NICE-SLAM？](https://mp.weixin.qq.com/s/dRSkc1eJ2OMhUM8hQGGhQw)
+- 标题：NICE-SLAM: Neural Implicit Scalable Encoding for SLAM
+- 作者：Zihan Zhu,et al.
+- 作者机构：浙江大学等单位
+- 论文：[点击下载](https://pan.baidu.com/s/1cNX5WMwcROa6i5GWpWPnWQ)
+
+### LISNeRF Mapping：基于激光雷达语义神经场的大规模3D场景隐式建图
+
+- 文章：[LISNeRF Mapping：基于激光雷达语义神经场的大规模3D场景隐式建图](https://mp.weixin.qq.com/s/UuR9H0d1XpRHTj4UaFzEAA)
+- 标题：LISNeRF Mapping: LiDAR-based Implicit Mapping via Semantic Neural Fields for Large-Scale 3D Scenes
+- 作者：Jianyuan Zhang,et al.
+- 论文：[点击下载](https://pan.baidu.com/s/1w7ZPNF8L2Yec9oaRkw2QtA)
+
+### 清华最新发布！OccNeRF：基于神经辐射场的自监督多相机占用预测
+
+- 文章：[清华最新发布！OccNeRF：基于神经辐射场的自监督多相机占用预测](https://mp.weixin.qq.com/s/2iMSf3dPP5cMvBC7Fhqk3g)
+- 标题：OccNeRF: Self-Supervised Multi-Camera Occupancy Prediction with Neural Radiance Fields
+- 作者：Chubin Zhang,et al.
+- 作者机构：清华大学
+- 论文：[点击下载](https://pan.baidu.com/s/1KrfOVWFlGvlO2x5yMan7ag)
+
+### ICCV2023 | 极坐标-点云梦幻联动，实现3D目标检测的最佳性能
+
+- 文章：[ICCV2023|极坐标-点云梦幻联动，实现3D目标检测的最佳性能](https://mp.weixin.qq.com/s/wBTZy8z_E34S139ycBdeFA)
+- 标题：PARTNER: Level up the Polar Representation for LiDAR 3D Object Detection
+- 作者：Ming Nieg,et al.
+- 作者机构：复旦大学等单位
+- 论文：[点击下载](https://pan.baidu.com/s/1gPlcot9TFfk_8mMtjoHLCQ)
+
+### 七大榜单榜首，SMPLer-X:首个人体动作捕捉大模型
+
+- 文章：[七大榜单榜首，SMPLer-X:首个人体动作捕捉大模型](https://mp.weixin.qq.com/s/N5hpJr_pHvOsuafPm-s30A)
+- 标题：SMPLer-X: Scaling Up Expressive Human Pose and Shape Estimation
+- 作者：Zhongang Cai,et al.
+- 作者机构：Nanyang Technological University
+- 论文：[点击下载](https://pan.baidu.com/s/1j9sCn4dyV3hFLgPET9xusg)
+
+### 圣地亚哥大学&英伟达重大突破！无需任何SFM预处理，实现精确相机姿态估计和逼真场景重建
+
+- 文章：[圣地亚哥大学&英伟达重大突破！无需任何SFM预处理，实现精确相机姿态估计和逼真场景重建](https://mp.weixin.qq.com/s/GzS1-TZ7Ijx6_nR4xQGNNQ)
+- 标题：COLMAP-Free 3D Gaussian Splatting
+- 作者：Yang Fu,et al.
+- 作者机构：圣地亚哥大学
+- 论文：[点击下载](https://pan.baidu.com/s/1E2pY1O_bS7CTTNvodU7SCQ)
+
+### 香港中文大学创新推出的LASA：3D场景重建技术的巅峰之作
+
+- 文章：[香港中文大学创新推出的LASA：3D场景重建技术的巅峰之作](https://mp.weixin.qq.com/s/4JRfbbyEYJfnWke4aDHg2A)
+- 标题：LASA: Instance Reconstruction from Real Scans using A Large-scale Aligned Shape Annotation Dataset
+- 作者：Haolin Liu,et al.
+- 作者机构：香港中文大学等单位
+- 论文：[点击下载](https://pan.baidu.com/s/1x_Eu3bbg5bgMNcUu3bNevA)
+
+### CVPRW23开源！无纹理和重复纹理也能实现鲁棒的特征匹配！
+
+- 文章：[CVPRW23开源！无纹理和重复纹理也能实现鲁棒的特征匹配！](https://mp.weixin.qq.com/s/BJm51FZVFUO7Dpabc-JIYg)
+- 标题：Structured Epipolar Matcher for Local Feature Matching
+- 作者：Jiahao Chang,et al.
+- 作者机构：中国科学技术大学
+- 论文：[点击下载](https://pan.baidu.com/s/1rFRDrFA2lzhLIrKwi6AKyQ)
+
+### ICCV2023开源！BEV分割再增强、视点鲁棒性up！
+
+- 文章：[ICCV2023开源！BEV分割再增强、视点鲁棒性up！](https://mp.weixin.qq.com/s/uotf4bdi1BxouAgU1gt3Aw)
+- 标题：Towards Viewpoint Robustness in Bird’s Eye View Segmentation
+- 作者：Tzofi Klinghoffer,et al.
+- 作者机构：MIT、英伟达等单位
+- 论文：[点击下载](https://pan.baidu.com/s/1Duoqbhsc8_nTJ4F2fgwc4w)
+
+----------------------------------------
+
 ### 深度学习神器DYnet++：轻松驾驭复杂自由曲面，3D测量无难度！
 
 - 文章：[深度学习神器DYnet++：轻松驾驭复杂自由曲面，3D测量无难度！](https://mp.weixin.qq.com/s/_5-nOz8wbVthUAjYJCI2DA)
