--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -12,6 +12,10 @@
 
 
 
+### 3D Gaussian Splatting
+
+- [点击查看](https://github.com/MrNeRF/awesome-3D-gaussian-splatting)
+
 ### 复旦最新提出！革命性的LiDAR SLAM统一架构！
 
 - 文章：[复旦最新提出！革命性的LiDAR SLAM统一架构！](https://mp.weixin.qq.com/s/hVJw37IM7-_0Rs_s1nKD5Q)
