--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -12,7 +12,7 @@
 
 
 
-### 3D Gaussian Splatting
+### 3D Gaussian Splatting论文
 
 - [点击查看](https://github.com/MrNeRF/awesome-3D-gaussian-splatting)
 
